--- a/controller/src/main/resources/templates/order-create.html
+++ b/controller/src/main/resources/templates/order-create.html
@@ -79,16 +79,8 @@
                                 data-bs-target="#userForm">
                             Личные данные
                         </button>
-                        <body>
-                        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-                        <form th:action="@{/logout}" method="post">
-                            <input type="submit" value="Sign Out"/>
-                        </form>
-                        </body>
                         <div class="g-notification__divider dropdown-divider"></div>
-                        <form action="${pageContext.request.contextPath}/" name="deleting"
-                              method="post">
-                            <input type="hidden" name="logOut" value="logOut"/>
+                        <form th:action="@{/logout}" method="post" name="deleting">
                             <button class="dropdown-item">Выйти</button>
                         </form>
                     </div>
@@ -130,106 +122,82 @@
 </div>
 <div class="g-container">
     <main class="g-main container-fluid">
-        <div class="d-flex bd-highlight mb-3">
-            <div class="p-2 bd-highlight"><h2>Заказы</h2></div>
-            <div class="ml-auto p-2 bd-highlight">
-                <a class="btn btn-outline-primary"
-                   href="/order-create" role="button">
-                    <i class="col-1 bi bi-plus-circle"> Создать</i>
+        <div class="row">
+            <div class="col-11">
+                <h1>Новый заказ</h1>
+            </div>
+            <div class="col-1">
+                <a class="btn btn-outline-primary" href="/orders"
+                   role="button">
+                    <i class="col-1 bi bi-arrow-90deg-left"> Назад</i>
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
                 <section class="g-section">
-                    <!--<div th:if test="${not empty orders}">-->
+                    <form th:method="POST" th:action="@{/orders}" onsubmit="return validateForm()">
+                    <h4>Клиент</h4>
+                    <div class="mb-3 row">
+                        <label class="col-sm-3 col-form-label">Фамилия<br>
+                            <input class="form-control" type="text" th:field="*{client.surname}" name="type" placeholder="Фамилия"></label>
+                        <label class="col-sm-2 col-form-label">Имя<br>
+                            <input class="form-control" type="text" th:field="*{client.name}" name="type" placeholder="Имя"></label>
+                        <label class="col-sm-3 col-form-label">Отчество<br>
+                            <input class="form-control" type="text" th:field="*{client.patronymic}" name="type" placeholder="Отчество"></label>
+                        <label class="col-sm-2 col-form-label">Телефон<br>
+                            <input type="text" class="form-control" value="${order.client.phoneNumber}"></label>
+                        <label class="col-sm-2 col-form-label">Эл. адрес<br>
+                            <input type="email" class="form-control"></label>
+                    </div>
+                    <h4>Доставка <span class="g-main__subtitle">(${order.delivery.name})</span></h4>
+                    <div class="mb-3 row">
+                        <label class="col-sm-3 col-form-label">Город<br>
+                            <input type="text" class="form-control" value="${order.client.address.city}"></label>
+
+                        <label class="col-sm-2 col-form-label">Ул.<br>
+                            <input type="text" class="form-control" value="${order.client.address.street}"></label>
+
+                        <label class="col-sm-3 col-form-label">Дом.<br>
+                            <input type="text" class="form-control" value="-"></label>
+
+                        <label class="col-sm-2 col-form-label">Корп.<br>
+                            <input type="text" class="form-control" value="-"></label>
+                        <label class="col-sm-2 col-form-label">Индекс<br>
+                            <input type="text" class="form-control" value="${order.client.address.postalCode}"></label>
+                    </div>
+                    <h4>Товар</h4>
+                    <c:if test="${not empty order.products}">
                         <table class="table">
-                            <thead class="thead-light">
+                            <thead class="thead">
                             <tr>
                                 <th scope="col">№</th>
-                                <th scope="col">Дата заказа</th>
-                                <th scope="col">Товар</th>
-                                <th scope="col">Клиент</th>
-                                <th scope="col">Сумма заказа</th>
-                                <th scope="col">Доставка</th>
-                                <th scope="col">Статус заказа</th>
+                                <th scope="col">Описание</th>
+                                <th scope="col">Цена</th>
+                                <th scope="col">Категория</th>
                                 <th scope="col"></th>
                             </tr>
                             </thead>
                             <tbody>
-                            <div th:each="order : ${orders}">
-                                <!--<c:choose>
-                                    <c:when test="${order.status == 'Активен'}">
-                                        <tr class="table-warning">
-                                    </c:when>
-                                    <c:when test="${order.status == 'Выполнен'}">
-                                        <tr class="table-success">
-                                    </c:when>
-                                    <c:otherwise>-->
+                            <c:forEach var="product" items="${order.products}" varStatus="status">
                                 <tr>
-                                    <!--    </c:otherwise>
-                                    </c:choose>-->
-                                    <td th:text="${order.id}">Id</td>
-                                    <td th:text="${#dates.format(order.dateChange, 'dd-MMM-yyyy')}">dataCreate</td>
-                                    <td>
-                                        <select name="product">
-                                            <div th:each="product : ${order.products}">
-                                                <option th:text="${product.description}">description</option>
-                                            </div>
-                                        </select>
-                                    </td>
-                                    <td th:text="${order.client.name}">client</td>
-                                    <td th:text="${order.price}">client</td>
-                                    <td th:text="${order.delivery.name}">delivery</td>
-                                    <td th:text="${order.status}">delivery</td>
-                                    <td>
-                                        <a class="g-header__nav-link"
-                                           data-toggle="dropdown" role="button" aria-haspopup="true"
-                                           aria-expanded="false">
-                                            <i class="g-header__icon--caret fas fa-caret-down"></i>
-                                        </a>
-                                        <div class="g-notification dropdown-menu dropdown-menu-right">
-                                            <button class="dropdown-item js-course-detail"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#OtderForm"
-                                                    data-сreate="${order}"
-                                                    data-order-client-name="${order.client.name}"
-                                                    order-price="${order.price}">
-                                                Информация
-                                            </button>
-                                            <form action="${pageContext.request.contextPath}/managerPage"
-                                                  name="deleting"
-                                                  method="post">
-                                                <input type="hidden" name="orderId" value="${order.id}"/>
-                                                <input type="hidden" name="pageName" value="Order"/>
-                                                <button class="dropdown-item">Информация</button>
-                                            </form>
-                                        </div>
-                                    </td>
+                                    <td>${status.count}</td>
+                                    <td>${product.description}</td>
+                                    <td>${product.price}</td>
+                                    <td>${product.section}</td>
                                 </tr>
-                            </div>
+                            </c:forEach>
                             </tbody>
                         </table>
-                    <!--</div>-->
-                    <c:if test="${empty orders}">
+                    </c:if>
+                    <c:if test="${empty order.products}">
                         Заказов нет!
                     </c:if>
+                        <input type="submit" value="Сохранить">
+                    </form>
                 </section>
             </div>
         </div>
-        <script>
-            $(function () {
-                $(".js-course-detail").click(
-                    function () {
-                        var dataCreate = $(this).attachInternals('data-сreate');
-                        var clientName = $(this).attr('data-order-client-name');
-                        var orderPrice = $(this).attr('order-price');
-                        $("#dataCreate").text(dataCreate.attr)
-                        $("#clientName").val(clientName)
-                        $("#orderPrice").val(orderPrice)
-                    })
-            });
-        </script>
     </main>
 </div>
 <footer class="g-footer text-right">
