--- a/controller/src/main/resources/templates/partials/navigation.html
+++ b/controller/src/main/resources/templates/partials/navigation.html
@@ -1,4 +1,6 @@
-<header class="g-header">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<header class="g-header" th:fragment="content">
     <div class="d-flex justify-content-between">
         <div class="d-flex align-items-center">
             <a class="g-header__sidebar-toggle" href="javascript:void(0)">
@@ -10,7 +12,7 @@
             <li class="g-header__nav-item dropdown">
                 <a class="g-header__nav-link nav-link dropdown-toggle d-flex active align-items-center"
                    data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                   " ${UserName.name} "
+                    <h5 sec:authentication="name">userName</h5>
                     <i class="g-header__icon g-header__icon--caret fas fa-caret-down"></i>
                 </a>
                 <div class="g-notification dropdown-menu dropdown-menu-right">
@@ -20,8 +22,7 @@
                         Личные данные
                     </button>
                     <div class="g-notification__divider dropdown-divider"></div>
-                    <form action="${pageContext.request.contextPath}/" name="deleting"
-                          method="post">
+                    <form th:action="@{/logout}" method="post">
                         <input type="hidden" name="logOut" value="logOut"/>
                         <button class="dropdown-item">Выйти</button>
                     </form>
@@ -30,15 +31,14 @@
         </ul>
     </div>
 </header>
-
-<nav class="g-sidebar">
+<nav class="g-sidebar" th:fragment="content">
     <div class="g-sidebar__profile container d-flex active align-items-center">
         <img class="g-sidebar__profile-photo rounded-circle img-fluid"
              src="https://avatars.githubusercontent.com/u/60327596?s=400&v=4"/>
 
         <div class="g-sidebar__details">
             <span class="g-sidebar__profile-message">Welcome,</span>
-            <span class="g-sidebar__profile-name">"${UserName.name}"</span>
+            <span class="g-sidebar__profile-name" sec:authentication="name">UserName</span>
         </div>
     </div>
 
@@ -46,13 +46,15 @@
         <ul class="g-sidebar__menu-list">
 
             <li class="g-sidebar__menu-item">
-                <a class="g-sidebar__menu-link" href="${pageContext.request.contextPath}/managerPage?pageName=Orders">
+                <a class="g-sidebar__menu-link"
+                   href="${pageContext.request.contextPath}/managerPage?pageName=Orders">
                     <i class="g-sidebar__menu-icon far fa-window-restore"></i>
                     <span class="g-sidebar__menu-description">Заказы</span>
                 </a>
             </li>
             <li class="g-sidebar__menu-item">
-                <a class="g-sidebar__menu-link" href="${pageContext.request.contextPath}/managerPage?pageName=Catalog">
+                <a class="g-sidebar__menu-link"
+                   href="${pageContext.request.contextPath}/managerPage?pageName=Catalog">
                     <i class="g-sidebar__menu-icon far fa-window-restore"></i>
                     <span class="g-sidebar__menu-description">Каталог</span>
                 </a>
