--- a/controller/src/main/resources/templates/partials/navigation.html
+++ b/controller/src/main/resources/templates/partials/navigation.html
@@ -47,14 +47,14 @@
 
             <li class="g-sidebar__menu-item">
                 <a class="g-sidebar__menu-link"
-                   href="${pageContext.request.contextPath}/managerPage?pageName=Orders">
+                    href="/manager/orders">
                     <i class="g-sidebar__menu-icon far fa-window-restore"></i>
                     <span class="g-sidebar__menu-description">Заказы</span>
                 </a>
             </li>
             <li class="g-sidebar__menu-item">
                 <a class="g-sidebar__menu-link"
-                   href="${pageContext.request.contextPath}/managerPage?pageName=Catalog">
+                   href="/catalog">
                     <i class="g-sidebar__menu-icon far fa-window-restore"></i>
                     <span class="g-sidebar__menu-description">Каталог</span>
                 </a>
