--- a/controller/src/main/resources/templates/manager/orders.html
+++ b/controller/src/main/resources/templates/manager/orders.html
@@ -7,6 +7,9 @@
     <main class="g-main container-fluid">
         <div class="d-flex bd-highlight mb-3">
             <div class="p-2 bd-highlight"><h2>Заказы</h2></div>
+            <div class="p-2 bd-highlight">
+            </div>
+
             <div class="ml-auto p-2 bd-highlight">
                 <a class="btn btn-outline-primary"
                    href="/manager/order/new" role="button">
@@ -14,15 +17,61 @@
                 </a>
             </div>
         </div>
+        <form class="form-inline">
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="date" th:value="${filter.dateCreateFor}" th:name="dateCreateFor">
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="date" th:value="${filter.dateCreateBefore}" th:name="dateCreateBefore">
+            </div>
+           <!-- <div class="form-group mx-sm-3 mb-2">
+                <input type="text" th:value="${filter.client}" th:name="client">
+            </div>-->
+            <button type="submit" class="btn btn-primary mb-2">Фильтр</button>
+        </form>
+
         <div class="row">
             <div class="col-12">
                 <section class="g-section">
                     <table class="table">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">№</th>
-                            <th scope="col">Дата заказа</th>
-                            <th scope="col">Дата изменения</th>
+                            <th scope="col">
+                                <form method="get" th:action="@{/manager/orders}">
+                                    <div th:if="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="desc" th:name="sortDir"/>
+                                    </div>
+                                    <div th:unless="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="asc" th:name="sortDir"/>
+                                    </div>
+                                    <input type="hidden" th:value="id" th:name="sortField"/>
+                                    <input class="btn btn-link" type="submit" value="№">
+                                </form>
+                            </th>
+                            <th scope="col">
+                                <form method="get" th:action="@{/manager/orders}">
+                                    <div th:if="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="desc" th:name="sortDir"/>
+                                    </div>
+                                    <div th:unless="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="asc" th:name="sortDir"/>
+                                    </div>
+                                    <input type="hidden" th:value="dateCreate" th:name="sortField"/>
+                                    <input class="btn btn-link" type="submit" value="Дата заказа">
+                                </form>
+                            </th>
+                            <th scope="col">
+                                <form method="get" th:action="@{/manager/orders}">
+                                    <div th:if="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="desc" th:name="sortDir"/>
+                                    </div>
+                                    <div th:unless="${nam.sortDir=='asc'}">
+                                        <input type="hidden" th:value="asc" th:name="sortDir"/>
+                                    </div>
+                                    <input type="hidden" th:value="dateChange" th:name="sortField"/>
+                                    <input class="btn btn-link" type="submit" value="Дата изменения">
+                                </form>
+                            </th>
                             <th scope="col">Товар</th>
                             <th scope="col">Клиент</th>
                             <th scope="col">Сумма заказа</th>
@@ -83,56 +132,60 @@
         </div>
         <div style="text-align: center">
 
-
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    <li class="page-item" th:if="${currentPage > 1}">
-                        <a class="page-link"
-                           th:href="@{'/manager/orders/'+ ${1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Первая</a>
+                    <li class="page-item" th:if="${nam.pageNumber > 1}">
+                    <li class="page-item" th:if="${nam.pageNumber > 1}">
+                        <form method="get" th:action="@{/manager/orders}">
+                            <input type="hidden" th:value="1" th:name="pageNumber"/>
+                            <input class="page-link" type="submit" value="Первая">
+                        </form>
                     </li>
-                    <li class="page-item disabled" th:unless="${currentPage > 1}">
+                    <li class="page-item disabled" th:unless="${nam.pageNumber > 1}">
                         <span class="page-link" aria-hidden="true">Первая</span>
                     </li>
-                    <li class="page-item " th:if="${currentPage > 1}">
-                        <a class="page-link"
-                           th:href="@{'/manager/orders/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                           aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
+                    <li class="page-item " th:if="${nam.pageNumber > 1}">
+                        <form method="get" th:action="@{/manager/orders}">
+                            <input type="hidden" th:value="${nam.pageNumber - 1}" th:name="pageNumber"/>
+                            <input class="page-link" type="submit" value="&laquo;">
+                        </form>
                     </li>
-                    <li class="page-item disabled " th:unless="${currentPage > 1}">
+                    <li class="page-item disabled " th:unless="${nam.pageNumber > 1}">
                         <span class="page-link" aria-hidden="true">&laquo;</span>
                     </li>
-                    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-                        <li class="page-item" th:if="${i != currentPage}">
-                            <a class="page-link"
-                               th:href="@{'/manager/orders/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-                        </li>
-                        <li class="page-item active" th:unless="${i != currentPage}">
+                    <span th:each="i: ${#numbers.sequence(1, nam.getTotalPages)}">
+                          <li class="page-item" th:if="${i != nam.pageNumber}">
+                          <form method="get" th:action="@{/manager/orders}">
+                          <input type="hidden" th:value="${i}" th:name="pageNumber"/>
+                          <input class="page-link" type="submit" th:value="${i}">
+                          </form>
+                          </li>
+                        <li class="page-item active" th:unless="${i != nam.pageNumber}">
                             <span class="page-link">[[${i}]]</span>
                         </li>
                     </span>
-                    <li class="page-item " th:if="${currentPage < totalPages}">
-                        <a class="page-link"
-                           th:href="@{'/manager/orders/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
-                           aria-label="Previous">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
+                    <li class="page-item " th:if="${nam.pageNumber < nam.getTotalPages}">
+                        <form method="get" th:action="@{/manager/orders}">
+                            <input type="hidden" th:value="${nam.pageNumber + 1}" th:name="pageNumber"/>
+                            <input class="page-link" type="submit" value="&raquo;">
+                        </form>
                     </li>
-                    <li class="page-item disabled " th:unless="${currentPage < totalPages}">
+                    <li class="page-item disabled " th:unless="${nam.pageNumber < nam.getTotalPages}">
                         <span class="page-link" aria-hidden="true">&raquo;</span>
                     </li>
-                    <li class="page-item" th:if="${currentPage < totalPages}">
-                        <a class="page-link"
-                           th:href="@{'/manager/orders/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Последняя</a>
+                    <li class="page-item" th:if="${nam.pageNumber < nam.getTotalPages}">
+                        <form method="get" th:action="@{/manager/orders}">
+                            <input type="hidden" th:value="${nam.getTotalPages}" th:name="pageNumber"/>
+                            <input class="page-link" type="submit" value="Последняя">
+                        </form>
                     </li>
-                    <li class="page-item disabled" th:unless="${currentPage < totalPages}">
+                    <li class="page-item disabled" th:unless="${nam.pageNumber < nam.getTotalPages}">
                         <span class="page-link" aria-hidden="true">Последняя</span>
                     </li>
                 </ul>
             </nav>
             <p>
-                Всего строк [[${totalItems}]] : Страница [[${currentPage}]] из [[${totalPages}]]
+                Всего строк [[${nam.getTotalElements}]] : Страница [[${nam.pageNumber}]] из [[${nam.getTotalPages}]]
             </p>
         </div>
     </main>
