--- a/controller/src/main/resources/templates/manager/orders.html
+++ b/controller/src/main/resources/templates/manager/orders.html
@@ -27,6 +27,7 @@
            <!-- <div class="form-group mx-sm-3 mb-2">
                 <input type="text" th:value="${filter.client}" th:name="client">
             </div>-->
+            <input type="hidden" th:value="1" th:name="pageNumber"/>
             <button type="submit" class="btn btn-primary mb-2">Фильтр</button>
         </form>
 
