--- a/controller/src/main/resources/templates/login.html
+++ b/controller/src/main/resources/templates/login.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example </title>
-    </head>
-    <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="icon" href="http://vladmaxi.net/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="http://vladmaxi.net/favicon.ico" type="image/x-icon">
+    <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+</head>
+<body>
+<section class="container">
+    <div class="login">
+        <h1>Войти в личный кабинет</h1>
         <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <p><input type="text" name="username" value="" placeholder="Логин или Email"></p>
+            <p><input type="password" name="password" value="" placeholder="Пароль"></p>
+            <p class="remember_me">
+            </p>
+            <p class="submit"><input type="submit" name="commit" value="Войти"></p>
         </form>
-    </body>
+    </div>
+</section>
+</body>
 </html>
