--- a/controller/src/main/resources/templates/manager/order-create.html
+++ b/controller/src/main/resources/templates/manager/order-create.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head th:insert="partials/head :: content"/>
 <body>
-<div class="g-navigation" th:insert="partials/navigation :: content"/>
+<div class="g-navigation" th:insert="partials/navigation :: manager"/>
 <div class="g-container">
     <main class="g-main container-fluid">
         <div class="d-flex bd-highlight mb-3">
