--- a/controller/src/main/resources/templates/partials/navigation.html
+++ b/controller/src/main/resources/templates/partials/navigation.html
@@ -35,7 +35,7 @@
 <nav class="g-sidebar" th:fragment="manager">
     <div class="g-sidebar__profile container d-flex active align-items-center">
         <img class="g-sidebar__profile-photo rounded-circle img-fluid"
-             src="https://avatars.githubusercontent.com/u/60327596?s=400&v=4"/>
+             th:src="@{/c44b41d8415c42d59a0c6d1bb73d93ef.jpg}"/>
 
         <div class="g-sidebar__details">
             <span class="g-sidebar__profile-message">Welcome,</span>
